--- a/cars.html
+++ b/cars.html
@@ -154,8 +154,10 @@
   <footer>
     <p>&copy; 2025 DriveHive. All rights reserved.</p>
   </footer>
+ <script src="services/api.js"></script>
+  <script src="js/cars.js"></script>
 
-  <script>
+  <!-- <script>
     const cars = [
       { id: "tesla-model-s", name: "Tesla Model S", type: "Electric", year: 2024, price: "$89,000", img: "assets/images/tesla.jpeg", description: "A premium all-electric sedan with impressive range and performance." },
       { id: "ford-mustang", name: "Ford Mustang", type: "Gasoline", year: 2023, price: "$55,000", img: "assets/images/mustang.jpeg", description: "An iconic American muscle car with unmatched style and power." },
@@ -184,6 +186,6 @@
       });
       carList.appendChild(card);
     });
-  </script>
+  </script> -->
 </body>
 </html>
