updted api base url

--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
         <li><a href="bookings.html">My Bookings</a></li>
         <!-- <li><a href="login.html">Login</a></li> -->
         <li><a href="register.html">Register</a></li>
+        <!-- <li> <a href="payment.html">Payment</a></li> -->
       </ul>
     </nav>
   </header>
